--- a/config/database.yml
+++ b/config/database.yml
@@ -77,8 +77,18 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
+#
+# Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
+# for a full overview on how database connection configuration can be specified.
+#
+
+production:
+  <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   database: rails_on_render_production
   username: rails_on_render
-  password: <%= ENV["RAILS_ON_RENDER_DATABASE_PASSWORD"] %>
+  password: <%= ENV['MY_APP_RENDER_DATABASE_PASSWORD'] %>
